<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".InfoFragment"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_fragment_default_name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!--This View serves as a visual divider between title and header -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividers"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />

        <!-- This layout encapsulates the view where we show distance/time to place
                as well as the "visited" status of the place -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <!-- Split this view in two halves;
                    1st for distance/time information
                    2nd for "visited" status -->
            <LinearLayout
                android:id="@+id/distance_time_info_view"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_distance_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_to_location_null" />
                <TextView
                    android:id="@+id/tv_time_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_location_null" />
                <ProgressBar
                    android:id="@+id/pb_load_distance_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="5dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </LinearLayout>
            <!--This View serves as a visual divider between header and detailed info -->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorDividers"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >
                <Switch
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:id="@+id/switch_visited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visited_switch_string" />

            </LinearLayout>

        </LinearLayout>

        <!--This View serves as a visual divider between header and detailed info -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividers"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />

        <!-- Inside this TV we put all the detailed info about the place -->
        <TextView
            android:id="@+id/tv_location_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- A progress bar that will be shown to users to indicate that info is loading -->
        <ProgressBar
            android:id="@+id/pb_loading_info"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_show_on_map"
            android:text="@string/show_in_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>